[project]
name = "riffusion"
description = "A ComfyUI extension for Riffusion audio generation."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.21.0", "Pillow>=9.0.0", "scipy>=1.7.0", "torch>=1.9.0", "torchaudio>=0.9.0", "pedalboard>=0.7.0"]

[project.urls]
Repository = "https://github.com/traugdor/ComfyUI-Riffusion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "traugdor"
DisplayName = "ComfyUI-Riffusion"
Icon = ""
